dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
.md-paging {
    .mbsc-scv, .mbsc-scv-sc, .mbsc-scv-item {
        width: 100%;
    }    
}

#case-header
{
  mbsc-tab-nav {
    width: 100%;
    mbsc-nav-item {
        &:nth-child(2) {
            width: 60%;
            padding-right: 0px;
            padding-left: 0px;
        }
    }
  }
}

.case-sub-header{
  margin: 0;  
}

.red {
  color: #a94442;
}

.case-content
{
  padding-top: 46px;
  display: block;
}

::ng-deep {
  .mbsc-select.mbsc-input {
    margin:0px!important;
    input { border-bottom: 0px!important; }
  }
  /* fix for switch color and body, if fixed in new version - remove*/
  .mbsc-ios {
    /* .mbsc-btn {
      background: #fff;
      color: #007bff;
      margin: .5em .025em;
      padding: .625em 1.375em;
      border: 0;
      border-radius: .25em;
    } */
    &.mbsc-switch {
      background-color: white;
      //margin-top: 0;
      .mbsc-label, .mbsc-desc {
        padding-left: .5em;
      }
      &:before, &:after {
        border-color: #ccc;
      }
    }
    .mbsc-form-group-title {
      &.mbsc-collapsible-header {
        padding-top: 1.5em;
        .mbsc-collapsible-icon {
          top: 58%
        }
        .section-info {
          font-size: xx-small;
          color: black;
          text-transform: none;
        }
      }
     }
  }
}

.extended-case-container {
  overflow-y: auto;
  background: #fff;
  ::ng-deep .row {
    margin-right: 0;
    .col-xs-1,  .col-sm-1,  .col-md-1,  .col-lg-1,  .col-xs-2,  .col-sm-2,  .col-md-2,  .col-lg-2,
    .col-xs-3,  .col-sm-3,  .col-md-3,  .col-lg-3,  .col-xs-4,  .col-sm-4,  .col-md-4,  .col-lg-4,
    .col-xs-5,  .col-sm-5,  .col-md-5,  .col-lg-5,  .col-xs-6,  .col-sm-6,  .col-md-6,  .col-lg-6,
    .col-xs-7,  .col-sm-7,  .col-md-7,  .col-lg-7,  .col-xs-8,  .col-sm-8,  .col-md-8,  .col-lg-8,
    .col-xs-9,  .col-sm-9,  .col-md-9,  .col-lg-9,  .col-xs-10,  .col-sm-10,  .col-md-10,  .col-lg-10,
    .col-xs-11,  .col-sm-11,  .col-md-11,  .col-lg-11,  .col-xs-12,  .col-sm-12,  .col-md-12,  .col-lg-12 {
      padding-right: 10px;
    }
  }
  ::ng-deep .container {
    padding-right: 0px;
    padding-left: 0px;
  }
}

